--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <tr>
         <td><img src="images/Mohammed Saif-2.png" alt="Mohammed Saif's profile picture"></td>
         <td>  <h1>Mohammed Saif Akkiwat</h1>
-          <p><em>Student and a <strong>Junior Web Deverloper </strong></em></p>
+          <p><em>Student and a <strong>Junior Web Developer </strong></em></p>
           <p>I am an undergraduate student and I love to learn and practice coding. Currently I am learning Web Development.
              I have already learnt JAVA(basics and Core JAVA). I aspire to become a <strong><em><a href="https://www.google.com/search?q=full+stack+developer&oq=full+stack+developer&aqs=chrome..69i57j0l7.4023j0j7&sourceid=chrome&ie=UTF-8">
              FULL STACK DEVELOPER</a></em></strong>.
