--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
        <hr>
        <footer>
          <h3>Something About This Website : </h3>
-         <p>This website is "under-construction". Since this website is built purely using HTML as of now,
-         it is not fascinating. So kindly ignore the ugly looks of the Website.</p>
+         <p>This website is built using html only. I have created this website just to provide some information about myself. Please ignore the ugly looks of this website and 
+         do not compare it with the other websites.</p>
          <h3><a href="contact-me.html">My contact details</a></h3>
        </footer>
   </body>
